[package]
name = "SafecoinWallet"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
bip39 = "2.1.0"
hex = "0.4.3"
hmac = "0.12.1"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["json"] }
secp256k1 = "0.30.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sha2 = "0.10.8"
tauri = "2.3.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
totp-rs = "5.6.0"
